--- a/components/rw97jrxmy-java-quarkus/overlays/stage/deployment-patch.yaml
+++ b/components/rw97jrxmy-java-quarkus/overlays/stage/deployment-patch.yaml
@@ -12,5 +12,5 @@ spec:
   template: 
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
+      - image: tssc-quay-quay-tssc-quay.apps.cluster-l52sr.l52sr.sandbox1190.opentlc.com/tssc/rhtap-qe-java-quarkus:a307d265c87d55ffed0948f696c8d9b85c65c673@sha256:24f4b013c6b74b66b67d802291e77ff30cccf8af1c7f109dd2d6c3252f5c1fde
         name: container-image  
